fixed #21: Fix flicker when changing page

--- a/javascripts/views/products/search/styles.css
+++ b/javascripts/views/products/search/styles.css
@@ -14,3 +14,8 @@
 	text-align: right;
 	padding-top: 15px;
 }
+
+.loading-overlay-block {
+  background-color: #ffffff;
+  opacity: 0.5
+}
